# hollywoodos

./: README.md  RUNNING.md  __main__.py  config.yaml  config_manager.py  cycling_window.py  main.py  plugin_interface.py  plugin_loader.py  plugin_registry.py  pyproject.toml  requirements.txt  run.py  setup.py  style.css  test_main.py  test_plugin.py  tile_window.py  window_manager.py
config/: default.yaml
data/: hex_dump.txt
docs/: tactical_map_plugin.md  test_plugin.md
plugins/: hex_scroll.py  log_scroll.py  matrix_rain.py  network_monitor.py  system_monitor.py
src/config/: default.yaml
src/hollywoodos/: __init__.py  app.py  main.py
src/hollywoodos/core/: __init__.py  config_manager.py  tile_window.py  window_manager.py
src/hollywoodos/plugins/: __init__.py  base.py  effects.py  registry.py
src/hollywoodos/plugins/builtin/: __init__.py  hex_scroll.py  log_scroll.py  matrix_rain.py  network_monitor.py  system_monitor.py  tactical_map.py
src/hollywoodos/utils/: __init__.py
tests/: __init__.py
