[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hollywoodos"
version = "0.1.0"
description = "A terminal-based cinematic computer activity simulator"
authors = [{name = "thraal", email = "thraal@gmail.com"}]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.45.0",
    "PyYAML>=6.0",
    "typing-extensions>=4.0.0"
]

[project.scripts]
hollywoodos = "hollywoodos.main:main"

[project.urls]
Homepage = "https://github.com/thraal/hollywoodos"
Repository = "https://github.com/thraal/hollywoodos"